# BlueBridge

./: CMakeLists.txt  LICENSE  README.md  sdkconfig.defaults  todo.txt
app/: settings.gradle
app/app/: build.gradle
app/app/src/main/: AndroidManifest.xml
app/app/src/main/cpp/: CMakeLists.txt  bluebridgeapp.cpp
app/app/src/main/res/layout/: activity_main.xml  mqtt_settings_dialog.xml
app/gradle/wrapper/: gradle-wrapper.properties
components/n2klib/: CMakeLists.txt  NMEA2000.cpp  NMEA2000_esp32.cpp
components/n2klib/include/: NMEA2000_esp32.h
doc/: Doxyfile  SMS commands.docx
hw/: .gitignore  Blue Bridge.mop  Blue Bridge.pcb  Blue Bridge.prj  Blue Bridge.sch  BlueBridge.pcb  BlueBridge.prj  BlueBridge.sch  BlueBridgeIoT.prj  BlueThing (PCB - Design Rule Check Report).txt  BlueThing (PCB - Forward Design Changes Report).txt  BlueThing (PCB - Schematic and PCB Check Report).txt  BlueThing.pcb  BlueThing.prj  BlueThing.sch  bom.xlsx  ~BlueBridgeIoT.pcb  ~BlueBridgeIoT.sch
hw - Copy/: .gitignore  BlueBridgeIoT.pcb  BlueBridgeIoT.sch
main/: CMakeLists.txt  WMM_COF.c  blue_thing.h  boat_iot.c  boat_iot.h  flash.c  flash.h  gpio.c  gpio.h  led.c  led.h  main.cpp  main.h  modem.c  modem.h  modem_interface.c  modem_interface.h  mqtt.c  mqtt.h  nmea.c  nmea.h  pdu.c  pdu.h  pressure_sensor.c  pressure_sensor.h  property_parser.c  property_parser.h  publisher.c  publisher.h  serial.c  serial.h  settings.c  settings.h  sms.c  sms.h  spp_acceptor.c  spp_acceptor.h  temperature_sensor.c  temperature_sensor.h  timer.c  (+5 more)
website/: Mapiator.js  index.html
(+10 files in other folders)
