idf_component_register(SRCS "main.cpp"
							"pressure_sensor.c"
							"serial.c"
							"spp_acceptor.c"
							"flash.c"
							"nmea.c"
							"timer.c"
							"wmm.c"
							"WMM_COF.c"
							"modem.c"
							"modem_interface.c"
							"mqtt.c"
							"boat_iot.c"
							"pdu.c"
							"settings.c"
							"property_parser.c"
							"sms.c"
							"util.c"
                    INCLUDE_DIRS ".")
